Added questions with readline, to get user input to build skill data, added bin value to package to allow CLI name linking

--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matthew Williams <orangegrove_1955@hotmail.com> (https://github.com/orangegrove1955)",
-  "license": "ISC"
+  "license": "ISC",
+  "bin": {
+    "alexa-boilerplate": "./cli.js"
+  }
 }
